css/styles.css
/* Element styling */

body,
form,
button,
input,
p {
  font-family:
    "Source Sans Pro",
    sans-serif;
}

body {
  background-color: #0a0e11;
}

h1,
h2,
h3,
h4,
h5,
h6,
label {
  font-family: Oswald, sans-serif;
}

h1,
h2,
h3,
p,
label {
  line-height: 1;
  margin: 0;
  color: #eaeaea;
}

button {
  background-color: #222f3b;
  border: 1px solid #5e503f;
  font-size: 0.9rem;
  color: #d9d9d9;
  padding: 0.17rem 0.9rem;
  margin-left: 0.4rem;
  border-radius: 0.2rem;
}

input {
  border: 1px solid #ced4da;
  border-radius: 0.2rem;
  padding: 0.2rem;
  padding-left: 0.5rem;
}

input:focus {
  outline: none;
}

img {
  width: 100%;
}

input[type="date"].modal-date-picker {
  width: 50px;
  height: 20px;
  position: relative;
  visibility: hidden;
  right: 12.1rem;
  top: 0.25rem;
}

button,
.exit-button,
.exit-icon,
.info-button,
.info-icon,
.add-button,
.separator-polygon {
  cursor: pointer;
}

/* Non-semantic classes */

.lds-ring {
  display: inline-block;
  position: relative;
  width: 80px;
  height: 80px;
}

.lds-ring div {
  box-sizing: border-box;
  display: block;
  position: absolute;
  width: 64px;
  height: 64px;
  margin: 8px;
  border: 8px solid #fff;
  border-radius: 50%;
  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
  border-color: #fff transparent transparent;
}

.lds-ring div:nth-child(1) {
  animation-delay: -0.45s;
}

.lds-ring div:nth-child(2) {
  animation-delay: -0.3s;
}

.lds-ring div:nth-child(3) {
  animation-delay: -0.15s;
}

@keyframes lds-ring {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

.nav-1 {
  background-color: #222f3b;
  filter: drop-shadow(0 0 0.1rem rgb(53, 53, 53));
}

.nav-1 h1 {
  font-size: 1.5rem;
  letter-spacing: 0.5px;
  padding: 1rem;
}

.plus-icon-container-mobile {
  display: block;
}

.nav-1 .plus-icon-container-mobile {
  padding: 12px;
}

.nav-2 {
  background-color: #5e503f;
  border-bottom: 1px solid #334b61;
}

.nav-2 h2 {
  font-weight: 500;
  padding: 0.5rem 1rem;
  font-size: 1rem;
}

.nav-2 .new-exercises-text {
  display: none;
}

.no-content {
  margin: 1.5rem;
  font-size: 0.9rem;
}

.no-content p {
  color: #b7b7b7;
}

.dark-bg {
  background-color: inherit;
}

.modal {
  position: absolute;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  background-color: #000000a7;
}

.modal-layout {
  margin-top: 7rem;
}

.modal-content {
  width: 336px;
  background-color: #0a0e11;
  border-radius: 0.5rem;
  border: 0.4rem solid #5e503f;
  min-height: 6rem;
  padding-bottom: 1rem;
}

.modal-content h2 {
  margin: 0.7rem 0 0.9rem;
  font-size: 1.25rem;
  font-weight: 500;
}

.modal-search-container input {
  width: 12rem;
}

.search-button {
  margin-bottom: 0.2rem;
}

.date-button {
  position: absolute;
  left: 0;
}

.add-button {
  margin-top: 0.48rem;
}

.date-polygon {
  margin-left: 0.2rem;
  width: 8px;
  height: 8px;
  position: relative;
  top: -1px;
}

.work-mod-cont button {
  width: 80px;
  height: 25px;
  padding: 0;
}

.modal-search-result {
  width: 12rem;
  border: 4px solid #263238;
  border-radius: 0.25rem;
}

.modal-img-alignment img {
  border: 2px solid #5e503f;
  border-radius: 0.2rem;
  width: 48px;
  height: 48px;
  object-fit: cover;
}

.modal-img-alignment {
  padding: 0.5rem 0.5rem 0.25rem;
}

.modal-result-content {
  flex-grow: 2;
  margin: 0.4rem 0 0.4rem 0.1rem;
}

.title-and-buttons > h3 {
  font-size: 0.75rem;
  padding-right: 0.25rem;
  font-weight: 400;
  margin-top: 0.25rem;
}

.info-button {
  margin-left: auto;
  font-size: 1.5rem;
  height: 2rem;
  padding: 0 0.75rem;
}

.modal-result-content > p {
  font-size: 0.7rem;
  font-weight: 300;
}

.mod-search-cont {
  max-height: 13.5rem;
  overflow: hidden;
  overflow-y: scroll;
}

.muscle-tag-container p {
  font-size: 0.65rem;
  background-color: #2f2f2f;
  border-radius: 0.2rem;
  padding: 0.1rem 0.2rem;
  margin-right: 0.4rem;
}

.modal-result-content > h3,
.modal-result-content > p,
.muscle-tag-container p {
  letter-spacing: 0.02rem;
}

.info-icon,
.modal-x-icon {
  width: 16px;
  height: 16px;
  margin-right: 0.2rem;
}

.modal-x-icon {
  position: absolute;
  right: 10px;
}

.info-modal,
.workout-modal {
  position: fixed;
}

.user-message > p {
  background-color: rgb(17, 60, 100);
  padding: 0.2rem;
  border-radius: 0.1rem;
}

.user-message {
  position: absolute;
  display: flex;
  top: 0;
  left: 0;
}

.day-separator {
  padding: 0.5rem 1rem;
  background-color: #2d2c30;
}

.day-separator > h3 {
  font-size: 0.9rem;
  font-weight: 500;
}

.upcoming-workout-entry {
  padding: 1rem;
}

.upcoming-workout-entry > .image-container > img {
  width: 72px;
  height: 75px;
  border: 1px solid #5e503f;
  margin-right: 1rem;
}

.exit-icon {
  width: 1rem;
  height: 1rem;
}

.exit-button {
  width: 2rem;
  height: 2rem;
  margin: 0 0.5rem;
}

.new-exercises-container {
  display: none;
  min-height: 100vh;
  padding-top: 2rem;
  background-color: #2d2c30;
}

.nav-1-search-container {
  display: none;
  margin: 1.2rem 0;
}

.nav-1-search-container button {
  font-size: 1.25rem;
  margin-right: 0.5rem;
  padding: 0.25rem 1rem;
  border-radius: 0.3rem;
  font-weight: 300;
  letter-spacing: 0.02rem;
}

.nav-1-search-container input {
  font-size: 1.25rem;
  width: 17.5rem;
  border-radius: 0.3rem;
}

.date-to-workout {
  display: none;
  align-self: center;
  margin-left: auto;
}

.nav-2-date {
  font-size: 1rem;
  width: 8rem;
  height: 30px;
  cursor: pointer;
  border: 3px solid #5e503f;
  border-radius: 0.5rem;
}

.nav-2-date-text {
  position: relative;
  top: 1px;
  margin-right: 0.5rem;
}

.up-work-cont-desk {
  display: none;
}

.up-work-cont-mob {
  display: block;
}

.plus-icon-container-desktop {
  display: none;
}

.muscle-tag-container {
  margin-bottom: 0.25rem;
}

.muscle-tag-container > p {
  padding: 0.1rem 0.75rem;
}

.info-icon {
  margin-left: auto;
}

button:hover,
.exit-icon:hover,
.info-icon:hover,
.separator-polygon:hover {
  filter: brightness(120%);
}

button.add-button:hover {
  filter: none;
}

/* Semantic classes */
.flex-col {
  flex-direction: column;
}

.space-between {
  justify-content: space-between;
}

.row-lr-center,
.col-ud-center {
  justify-content: center;
}

.col-lr-center,
.row-ud-center {
  align-items: center;
}

.text-align-center {
  text-align: center;
}

.hidden {
  display: none;
}

.margin-auto {
  margin: auto;
}

.gap-1r {
  gap: 1rem;
}

.pointer-cursor {
  cursor: pointer;
}

.wait-cursor {
  cursor: wait;
}

.bright-hover:hover {
  filter: brightness(120%);
}

.no-user-select {
  user-select: none;
}

.flex-wrap {
  flex-wrap: wrap;
}

.ml-auto {
  margin-left: auto;
}

.text-align-left {
  text-align: left;
}

.pos-rel {
  position: relative;
}

.p-1r {
  padding: 1rem;
}

.green-border {
  border-color: green;
}

.red-border {
  border-color: red;
}

.normal-border {
  border-color: #263238;
}

.low-brightness {
  filter: brightness(50%);
}

.w-100 {
  width: 100%;
}

@media only screen and (min-width: 768px) {
  button:hover {
    filter: brightness(120%);
  }

  .container {
    max-width: 720px;
  }

  .nav-1-search-container {
    display: block;
  }

  .date-to-workout {
    display: block;
  }

  .up-work-cont-desk {
    display: block;
  }

  .up-work-cont-mob {
    display: none;
  }

  .plus-icon-container-desktop {
    align-self: center;
    display: block;
  }

  .plus-icon-container-mobile {
    display: none;
    padding: 1.4rem 0.8rem 0.5rem 0;
  }

  .nav-2 .new-exercises-text {
    display: block;
  }

  .dark-bg {
    background-color: #514536;
  }

  .nav-1 h1 {
    font-size: 1.6rem;
    letter-spacing: 0.5px;
    padding: 1.5rem 0.75rem;
  }

  .nav-2 h2 {
    font-weight: 500;
    padding: 1rem;
    font-size: 1.4rem;
  }

  .no-content {
    margin: 1.75rem;
    font-size: 1.25rem;
  }

  .no-content p {
    color: #ced4da;
  }

  .modal-search-result {
    width: auto;
    margin: 0 1rem 1.5rem;
    border: 4px solid #222f3b;
    border-radius: 0.25rem;
    padding: 1rem;
    background-color: #0a0e11;
  }

  .modal-img-alignment img {
    width: 128px;
    height: 128px;
  }

  .modal-img-alignment {
    margin-right: 1.5rem;
  }

  .title-and-buttons > h3 {
    font-size: 2rem;
  }

  .modal-result-content > p {
    font-size: 1.3rem;
    font-weight: 300;
  }

  .muscle-tag-container p {
    position: relative;
    top: 3px;
    align-self: center;
    font-size: 1rem;
    font-weight: 300;
    height: 1.25rem;
    padding: 0 1rem;
    padding-top: 0.1rem;
    margin-right: 1rem;
  }

  .modal-content {
    width: 725px;
    margin-top: 7rem;
  }

  .modal-content h2 {
    margin: 1.5rem 0 0.9rem;
    font-size: 1.75rem;
    font-weight: 500;
  }

  .modal-x-icon {
    margin-right: 1rem;
  }

  .new-exercises-container,
  .upcoming-workouts-container {
    display: block;
    min-height: 100vh;
    padding-top: 2rem;
    background-color: #2d2c30;
  }

  .upcoming-workouts-container {
    padding-top: 1rem;
  }

  .desktop-day-separator {
    margin-bottom: 1rem;
  }

  .separator-polygon {
    width: 1rem;
    height: 1rem;
    align-self: center;
    margin: 0 1rem;
  }

  .separator-polygon:hover {
    cursor: pointer;
  }

  .green-border {
    border-color: green;
  }

  .hidden {
    display: none;
  }
}

